fix overflow shading

--- a/less/home.less
+++ b/less/home.less
@@ -19,6 +19,10 @@
   }
 }
 
+#bonus {
+  overflow: visible;
+}
+
 #table_bonus tr {
   cursor: default;
 
